changed font style

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,7 +2,7 @@ body {
     color: #40514E
     margin: 200%;
     text-align: center;
-    font-family: 'Merriweather' ,serif;
+    font-family: 'Merriweather' ,serif,roboto;
     position: relative;
     
 }
